--- a/app/views/call_votes/_vote_counter.html.erb
+++ b/app/views/call_votes/_vote_counter.html.erb
@@ -1,6 +1,3 @@
- <span id="score-<%= call.id %>">
-  <% if call.downvotes.count > 0 %>
-    -
-  <% end %>
+ <span id="score-<%= call.id %> score">
   <%= call.downvotes.count %>
 </span>
