--- a/app/views/layouts/application.mobile.erb
+++ b/app/views/layouts/application.mobile.erb
@@ -13,10 +13,15 @@
 
 </head>
 <body>
-  <% if current_user.present? %>
-    <%= link_to "Log Out", sessions_url %>
-  <% end %>
+<div data-role='footer'>
+  <div data-role="navbar">
+    <ul>
+      <li><%= link_to "<i class=\"fa fa-home\"></i> Home".html_safe, games_url %></li>
+      <li><%= link_to "<i class=\"fa fa-pencil-square-o\"></i> Stats".html_safe, stats_url %></li>
+      <li><%= link_to "Teams", teams_url %></li>
+    </ul>
+  </div><!-- /navbar -->
+</div>
   <%= yield %>
-
 </body>
 </html>
