--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -20,9 +20,13 @@
   </div>
 
   <div>
-    <%= f.hidden_field :password %>
-    <%= f.hidden_field :password_confirmation %>
+    <%= f.label :password %><br />
+    <%= f.text_field :password %>
+  </div>
 
+  <div>
+    <%= f.label :password_confirmation %><br />
+    <%= f.text_field :password_confirmation %>
   </div>
 
   <div>
