--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,6 +22,7 @@
   <% if current_user.present? %>
     <%= link_to "<i class=\"fa fa-home\"></i>".html_safe, games_url %>
     <%= link_to "Log Out", sessions_url %>
+    <%= link_to "Stats", stats_url %>
   <% else %>
     <div class="navbar navbar navbar-fixed-top" role="navigation">
       <div class="container">
