--- a/app/views/layouts/application.mobile.erb
+++ b/app/views/layouts/application.mobile.erb
@@ -10,7 +10,7 @@
   <%= stylesheet_link_tag "mobile", media: "all", "data-turbolinks-track" => true %>
   <link href="http://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet">
   <meta name="viewport" content="width=device-width">
-
+  <%= javascript_include_tag "mobile", "data-turbolinks-track" => true %>
 </head>
 <body>
 <div data-role='footer'>
