--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,16 +13,42 @@
   <script src="http://netdna.bootstrapcdn.com/bootstrap/3.0.2/js/bootstrap.min.js"></script>
 </head>
 <body>
-  <% if mobile_device? %>
-    <%= link_to "Full Site", :mobile => 0 %>
-  <% else %>
-    <%= link_to "Mobile Site", :mobile => 1 %>
-  <% end %>
-
   <% if current_user.present? %>
-    <%= link_to "<i class=\"fa fa-home\"></i>".html_safe, games_url %>
-    <%= link_to "Log Out", sessions_url %>
-    <%= link_to "Stats", stats_url %>
+  <div class="navbar navbar-inverse">
+    <div class="navbar-header">
+      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-inverse-collapse">
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </button>
+      <!-- <a class="navbar-brand" href="#">The Fan's Challenge</a> -->
+      <%= link_to "The Fan's Challenge", games_url, :class => 'navbar-brand' %>
+    </div>
+    <div class="navbar-collapse collapse navbar-inverse-collapse">
+      <ul class="nav navbar-nav">
+        <li><%= link_to "Home", games_url %></li>
+        <li><%= link_to "Teams", teams_url %></li>
+        <li><%= link_to "Stats", stats_url %></li>
+      </ul>
+      <ul class="nav navbar-nav navbar-right">
+        <li class="dropdown">
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown"><%= current_user.username %> <b class="caret"></b></a>
+          <ul class="dropdown-menu">
+            <li><%= link_to "Profile", user_url(current_user.id) %></li>
+            <li><%= link_to "Settings", edit_user_url(current_user.id) %></li>
+            <li><%= link_to "Contact Us", "#" %></li>
+             <% if mobile_device? %>
+              <li><%= link_to "Full Site", :mobile => 0 %></li>
+            <% else %>
+              <li><%= link_to "Mobile Site", :mobile => 1 %></li>
+            <% end %>
+            <li class="divider"></li>
+            <li><%= link_to "Log Out", sessions_url %></li>
+          </ul>
+        </li>
+      </ul>
+    </div><!-- /.nav-collapse -->
+  </div>
   <% else %>
     <div class="navbar navbar navbar-fixed-top" role="navigation">
       <div class="container">
