--- a/app/views/games/index.html.erb
+++ b/app/views/games/index.html.erb
@@ -54,7 +54,7 @@
     color: white;
   }
 
-  li {
+  li.users {
     padding-top: 10px;
     padding-bottom: 10px;
 
@@ -81,11 +81,11 @@
   <div class="col-lg-12">
 <!--     <h1>Scoreboard</h1>
  -->    <div class="col-xs-4 pull-left users">
-      <h2>Best Fans</h2>
-      <p>Prizes given out each week to the best fans!</p>
+      <h2>Most Active Fans</h2>
+      <!-- <p>Prizes given out each week to the best fans!</p> -->
         <ul class='top_users'>
         <% @top_users.each do |user| %>
-          <li><i class="fa fa-trophy"></i> <%= link_to user.username, user_url(user.id), :class => 'top_users' %> <span class='badge score'> <%= user.score %></span></li>
+          <li class='users'><i class="fa fa-trophy"></i> <%= link_to user.username, user_url(user.id), :class => 'top_users' %> <span class='badge score'> <%= user.score %></span></li>
         <% end %>
         </ul>
     </div>
