--- a/app/views/games/show.html.erb
+++ b/app/views/games/show.html.erb
@@ -62,7 +62,10 @@ body {
 }
 
 .center {
-  border: 7px solid #D9534F;
+  border: 5px solid rgba(217, 83, 79, .6);
+  /*box-shadow: 1px 1px 5px 3px #D9534F;*/
+
+
 }
 
 .left .logo {
