--- a/app/views/games/show.html.erb
+++ b/app/views/games/show.html.erb
@@ -68,7 +68,13 @@ body {
 
 }
 
-.left .logo {
+.left {
+    border-left: solid 5px #f1f1f1;
+    border-top: solid 5px #f1f1f1;
+    border-bottom: solid 5px #f1f1f1;
+}
+
+.logo {
   border-radius: 50%;
   position: absolute;
   top: -50px;
@@ -77,7 +83,13 @@ body {
   background-color: #999;
 }
 
-.right .logo {
+.right {
+    border-left: solid 5px #f1f1f1;
+    border-top: solid 5px #f1f1f1;
+    border-bottom: solid 5px #f1f1f1;
+}
+
+.logo {
   border-radius: 50%;
   position: absolute;
   top: -50px;
