--- a/app/views/games/show.mobile.erb
+++ b/app/views/games/show.mobile.erb
@@ -36,7 +36,7 @@
       <div class="ui-block-c title"><%= image_tag(@game.away_team.img_url) %></div>
   </fieldset>
 
-  <%= render 'challenges/form_mobile', game_id: @game_id %>
+  <%= render 'challenges/form_mobile', game_id: @game.id %>
 
   <div class='calls-challenges'>
     <% @game.things.each do |thing| %>
