--- a/app/views/games/index.html.erb
+++ b/app/views/games/index.html.erb
@@ -81,10 +81,10 @@
   <div class="col-lg-12">
 <!--     <h1>Scoreboard</h1>
  -->    <div class="col-xs-4 pull-left users">
-      <h2>Most Active Fans</h2>
+      <h2>Active Fans</h2>
       <!-- <p>Prizes given out each week to the best fans!</p> -->
         <ul class='top_users'>
-        <% @top_users.each do |user| %>
+        <% @top_users.reverse.each do |user| %>
           <li class='users'><i class="fa fa-trophy"></i> <%= link_to user.username, user_url(user.id), :class => 'top_users' %> <span class='badge score'> <%= user.score %></span></li>
         <% end %>
         </ul>
@@ -93,7 +93,7 @@
 
       <div class="col-xs-7 pull-right">
         <h2>Today's Games</h2>
-      <% @games.each do |game| %>
+      <% @games.reverse.each do |game| %>
       <div class="game-container">
         <div class="top">
           <%= image_tag game.home_team.img_url, :class => 'pull-left img-thumbnail' %>
