--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,21 +22,19 @@
         <span class="icon-bar"></span>
       </button>
       <!-- <a class="navbar-brand" href="#">The Fan's Challenge</a> -->
-      <%= link_to "The Fan's Challenge", games_url, :class => 'navbar-brand' %>
+      <%= link_to "<i class=\"fa fa-flag\"></i> The Fan's Challenge".html_safe, games_url, :class => 'navbar-brand danger' %>
     </div>
     <div class="navbar-collapse collapse navbar-inverse-collapse">
-      <ul class="nav navbar-nav">
+      <ul class="nav navbar-nav navbar-right">
         <li><%= link_to "Home", games_url %></li>
         <li><%= link_to "Teams", teams_url %></li>
         <li><%= link_to "Stats", stats_url %></li>
-      </ul>
-      <ul class="nav navbar-nav navbar-right">
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown"><%= current_user.username %> <b class="caret"></b></a>
           <ul class="dropdown-menu">
             <li><%= link_to "Profile", user_url(current_user.id) %></li>
             <li><%= link_to "Settings", edit_user_url(current_user.id) %></li>
-            <li><%= link_to "Contact Us", "#" %></li>
+            <li><%= link_to "Contact Us", contact_url %></li>
              <% if mobile_device? %>
               <li><%= link_to "Full Site", :mobile => 0 %></li>
             <% else %>
