--- a/app/views/games/show.html.erb
+++ b/app/views/games/show.html.erb
@@ -283,7 +283,7 @@ body {
   <% end %>
   </div><!-- container -->
 
-<%= subscribe_to "/games" %>
+<%= subscribe_to "http://fanschallengetest.herokuapp.com/games" %>
 
 <script>
 $(document).ready(function() {
