--- a/app/views/call_votes/create.js.erb
+++ b/app/views/call_votes/create.js.erb
@@ -1,4 +1,4 @@
-<% publish_to 'http://fanschallengetestserver.herokuapp.com/games' do %>
+<% publish_to '/games' do %>
   $('.call-score-<%= @call_vote.call_id %>').replaceWith('<%= j(render 'call_votes/vote_counter', call: @call_vote.call) %>');
   $('#call-disagree-<%= @call_vote.call_id %>').replaceWith('<%= j(render 'downvote', call: @call_vote.call) %>');
 <% end %>
