--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -21,7 +21,6 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <!-- <a class="navbar-brand" href="#">The Fan's Challenge</a> -->
       <%= link_to "<i class=\"fa fa-flag\"></i> The Fan's Challenge".html_safe, games_url, :class => 'navbar-brand danger' %>
     </div>
     <div class="navbar-collapse collapse navbar-inverse-collapse">
@@ -47,18 +46,20 @@
       </ul>
     </div><!-- /.nav-collapse -->
   </div>
+
   <% else %>
-    <div class="navbar navbar navbar-fixed-top" role="navigation">
-      <div class="container">
-        <div class="navbar-header">
-          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-            <span class="sr-only">Toggle navigation</span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
-          <a class="navbar-brand" href="#">Project name</a>
-        </div>
+
+  <div class="navbar navbar-inverse">
+    <div class="navbar-header">
+      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-inverse-collapse">
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </button>
+      <%= link_to "<i class=\"fa fa-flag\"></i> The Fan's Challenge".html_safe, root_url, :class => 'navbar-brand' %>
+    </div>
+    <div class="navbar-collapse collapse navbar-inverse-collapse">
+      <ul class="nav navbar-nav navbar-right">
         <div class="navbar-collapse collapse">
           <%= form_tag session_url, method: 'post', class: 'navbar-form navbar-right' do %>
             <div class='form-group'>
@@ -72,8 +73,10 @@
               <%= submit_tag 'Sign In', class: 'btn btn-danger' %>
           <% end %>
         </div><!--/.navbar-collapse -->
-      </div>
-    </div>
+      </ul>
+    </div><!-- /.nav-collapse -->
+  </div>
+
   <% end %>
 
   <%= yield %>
