--- a/app/views/games/index.html.erb
+++ b/app/views/games/index.html.erb
@@ -84,7 +84,7 @@
       <h2>Active Fans</h2>
       <!-- <p>Prizes given out each week to the best fans!</p> -->
         <ul class='top_users'>
-        <% @top_users.reverse.each do |user| %>
+        <% @top_users.each do |user| %>
           <li class='users'><i class="fa fa-trophy"></i> <%= link_to user.username, user_url(user.id), :class => 'top_users' %> <span class='badge score'> <%= user.score %></span></li>
         <% end %>
         </ul>
