--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
   <!DOCTYPE html>
 <html>
 <head>
-  <title>TFCV3</title>
+  <title>The Fan's Challenge</title>
   <%= javascript_include_tag "application", "data-turbolinks-track" => true %>
   <%= csrf_meta_tags %>
   <!-- Font Awesome -->
