Fixed heroku bug

--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -21,16 +21,16 @@
 
   <div>
     <%= f.label :password %><br />
-    <%= f.text_field :password %>
+    <%= f.password_field :password %>
   </div>
 
   <div>
     <%= f.label :password_confirmation %><br />
-    <%= f.text_field :password_confirmation %>
+    <%= f.password_field :password_confirmation %>
   </div>
 
   <div>
-    <%= f.label :description %><br />
+    <%= f.label :bio %><br />
     <%= f.text_area :description %>
   </div>
 
